# quicksearch-python-sdk

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/: async_usage.py  basic_usage.py  batch_example.py  consumer_example.py  error_handling.py
quicksearch/: __init__.py  async_batch_processor.py  async_client.py  batch_processor.py  client.py  exceptions.py  models.py  sync_client.py
tests/: __init__.py  conftest.py  test_async_batch.py  test_async_client.py  test_batch_models.py  test_integration.py  test_models.py  test_sync_batch.py  test_sync_client.py
